--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 <head>
-  <meta charset="utf-8">
-  <title>Shower</title>
+    <meta charset="utf-8">
+
+    <title>e-critures</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
